# dask-hpc

./: README.md  pyproject.toml  setup_vscode.sh
notebooks/: 01-launch-dask-cluster.ipynb  02-dask-demo.ipynb
src/dask_hpc/: custom_slurm_cluster.py
